<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateBirthdayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="607dp">

        <EditText
            android:id="@+id/mobile_update_text"
            android:layout_width="246dp"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:hint="@string/mobile_text_string"
            app:layout_constraintBottom_toTopOf="@+id/name_update_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/email_update_text"
            android:layout_width="246dp"
            android:layout_height="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/email_text_string"
            app:layout_constraintBottom_toTopOf="@+id/dob_update_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.384"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/fragmentname_view"
            android:layout_width="198dp"
            android:layout_height="62dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="@dimen/second_high"
            android:text="@string/Update_fragment"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/mobile_update_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/name_update_text"
            android:layout_width="246dp"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name_text_string"
            app:layout_constraintBottom_toTopOf="@+id/email_update_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/dob_update_text"
            android:layout_width="247dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="148dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/dob_text_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.396"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_update_save"
            android:layout_width="102dp"
            android:layout_height="44dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="76dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/btn_update_string"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>

