<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="601dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <Button
                android:id="@+id/btn_delete_save"
                android:layout_width="279dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="160dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/delete_view"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_add"
                android:layout_width="277dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/add_views"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_update_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_today"
                android:layout_width="279dp"
                android:layout_height="49dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/today_view"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_display"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/btn_update_save"
                android:layout_width="280dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/update_view"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_delete_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_display"
                android:layout_width="274dp"
                android:layout_height="52dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/display_view"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.507"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/todayDateView"
                android:layout_width="177dp"
                android:layout_height="34dp"
                android:layout_marginTop="4dp"
                android:text="Today's date: "
                android:textColor="@android:color/holo_orange_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>